2024-01-27  Georgios Athanasiou  <yorgath@gmail.com>

	* tests/test-reader.scm: Activate previously skipped test that
	failed with yaml-cpp 0.6.3.

2024-01-06  Georgios Athanasiou  <yorgath@gmail.com>

	Separate manipulators by target type for better documentation

	* scm/yamlpp.scm
	(yaml-set-indent!): Wrap the corresponding primitive.
	(yaml-string-manipulators): New variable that holds the
	manipulators only relevant to strings.
	(yaml-bool-manipulators): New variable that holds the manipulators
	only relevant to booleans.
	(yaml-int-manipulators): New variable that holds the manipulators
	only relevant to integers.
	(yaml-seq-manipulators): New variable that holds the manipulators
	only relevant to sequences.
	(yaml-map-manipulators): New variable that holds the manipulators
	only relevant to mappings.
	(yaml-manipulators): Construct from partial manipulator lists.
	(filter-manipulators): Optionally filter against a subset of all
	the valid manipulators.
	(yaml-set-style!): Use the renamed primitive.
	(yaml-set-string-format!): Use the renamed primitive.  Filter
	manipulators narrowly.
	(yaml-set-bool-format!): Use the renamed primitive.  Filter
	manipulators narrowly.
	(yaml-set-seq-format!): Use the renamed primitive.  Filter
	manipulators narrowly.
	(yaml-set-map-format!): Use the renamed primitive.  Filter
	manipulators narrowly.

2024-01-05  Georgios Athanasiou  <yorgath@gmail.com>

	Wrap primitives to improve documentation

	* scm/yamlpp.scm
	(make-yaml-emitter): Wrap the corresponding primitive.
	(yaml-emitter-good?): Wrap the corresponding primitive.
	(yaml-emitter-string): Wrap the corresponding primitive.
	(yaml-emit-null!): Wrap the corresponding primitive.
	(yaml-emit-string!): Wrap the corresponding primitive.
	(yaml-emit-boolean!): Wrap the corresponding primitive.
	(yaml-emit-integer!): Wrap the corresponding primitive.
	(yaml-emit-comment!): Wrap the corresponding primitive.
	(yaml-emit-newline!): Wrap the corresponding primitive.